--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: build
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.15, 18, 19, 19.6]
+        node-version: [14.17.0, 16.0.0, 18, 19, 19.6]
 
     steps:
       - name: Checkout code
@@ -24,7 +24,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: yarn install
+        run: npm install
 
       - name: Run tests
         run: yarn test
@@ -42,8 +42,3 @@ jobs:
         with:
           coverageLocations: |
             ${{github.workspace}}/coverage/clover.xml:clover
-
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
