--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:eslint-docs": "npm-run-all \"update:eslint-docs -- --check\"",
     "lint:js": "eslint .",
     "test": "c8 mocha tests --recursive",
-    "update:eslint-docs": "eslint-doc-generator"
+    "update:eslint-docs": "eslint-doc-generator",
+    "deploy": "npm version patch && npm pack && npm publish"
   },
   "dependencies": {
     "requireindex": "^1.2.0"
