--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eslint-plugin-rn-testid-checker",
+  "name": "eslint-plugin-rn-props-checker",
   "version": "0.0.0",
-  "description": "Ensure that testID prop exists in React Native Components",
+  "description": "Ensure that given props exists in React Native Components",
   "keywords": [
     "eslint",
     "eslintplugin",
